# remote-app-launcher

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ral/app/: main.py
src/ral/io/: __init__.py  creader.py
src/ral/models/: __init__.py  config.py
src/ral/types/: __init__.py  config.py
src/ral/utils/: logging.py
